--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-thunk": "^1.0.0",
+    "recoil": "^0.7.7",
     "redux": "^4.2.1",
+    "redux-saga": "^1.3.0",
     "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
